Commented out unused classes. Make temporal database use LogStatement